src/objects/Candidate__c.object
<CustomObject>
    <description>A candidate applying to a position at Box.</description>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code_Red__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Candidates that need to be expedited through the hiring process are marked as &quot;code red&quot; candidate.</description>
        <label>Code_Red</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Employer__c</fullName>
        <label>Current Employer</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Title__c</fullName>
        <label>Current Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currently_Employed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Currently Employed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Education__c</fullName>
        <description>This field should probably be called degree. It represents a candidates level of education.</description>
        <label>Education</label>
        <picklist>
            <picklistValues>
                <fullName>BA/BS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hs Diploma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA/MS/MBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ph.D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post Doc</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Email address of the candidate.</description>
        <externalId>true</externalId>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <description>First name of the candidate.</description>
        <externalId>true</externalId>
        <label>First Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <description>Last name of the candidate.</description>
        <externalId>true</externalId>
        <label>Last Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LinkedIn_Profile_URL__c</fullName>
        <description>it should contains the candidates LinkedIn Profile URL</description>
        <label>LinkedIn_Profile_URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Referrer_Confidential__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field determine whether the referrer don&apos;t want to be mentioned</description>
        <label>Referrer_Confidential</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Referrer_Email__c</fullName>
        <description>This field contains the email who referred candidate to Box</description>
        <label>Referrer_Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Referrer_Name__c</fullName>
        <description>This field contains the Name who referred candidate to Box</description>
        <label>Referrer_Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referrer_Notes__c</fullName>
        <description>This field contains the notes about the referred candidate</description>
        <label>Referrer_Notes</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Skype_Username__c</fullName>
        <description>The applicant&apos;s skype&apos;s user name.</description>
        <label>Skype Username</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <defaultValue>&quot;Individual&quot;</defaultValue>
        <description>contains the agency name which have uploaded the resume otherwise it will be individual</description>
        <label>Source</label>
        <length>75</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>Alabama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alaska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arizona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arkansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colorado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connecticut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delaware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>District of Columbia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Florida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Georgia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hawaii</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Idaho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Illinois</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iowa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kentucky</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Louisiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maryland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Massachusetts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Michigan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minnesota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mississippi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missouri</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Montana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nebraska</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>University__c</fullName>
        <description>Most recent university that the applicant has studied at.</description>
        <label>University</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_of_Experience__c</fullName>
        <label>Year of Experience</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>trigger_status__c</fullName>
        <label>trigger_status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Candidate</label>
    <listViews>
        <fullName>All</fullName>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Email__c</columns>
        <columns>Phone__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Candidates_List</fullName>
        <columns>NAME</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Email__c</columns>
        <columns>Phone__c</columns>
        <columns>State__c</columns>
        <columns>City__c</columns>
        <filterScope>Everything</filterScope>
        <label>Candidates List</label>
    </listViews>
    <listViews>
        <fullName>Code_Red_Candidates</fullName>
        <columns>NAME</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Email__c</columns>
        <columns>Phone__c</columns>
        <columns>University__c</columns>
        <columns>Year_of_Experience__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Code_Red__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Code Red Candidates</label>
    </listViews>
    <nameField>
        <displayFormat>C-{000000}</displayFormat>
        <label>CandidateID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Candidates</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>EducationNotNullRule</fullName>
        <active>false</active>
        <errorConditionFormula>ISPICKVAL(Education__c, &quot;&quot;)</errorConditionFormula>
        <errorDisplayField>Education__c</errorDisplayField>
        <errorMessage>You must select an education level</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>StateNotNullRule</fullName>
        <active>false</active>
        <errorConditionFormula>ISPICKVAL(State__c, &quot;&quot;)</errorConditionFormula>
        <errorDisplayField>State__c</errorDisplayField>
        <errorMessage>You must select a state</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Zip_Code_Rule</fullName>
        <active>false</active>
        <description>Zip code must be in 99999 or 99999-9999 format.</description>
        <errorConditionFormula>NOT(REGEX(  Zip_Code__c  , &quot;\\d{5}(-\\d{4})?&quot;))</errorConditionFormula>
        <errorDisplayField>Zip_Code__c</errorDisplayField>
        <errorMessage>Zip code must be in 99999 or 99999-9999 format.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>current_employee_rule</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
ISBLANK (  Current_Employer__c ), 
ISBLANK(   Year_of_Experience__c  ),

OR(  Currently_Employed__c )
)</errorConditionFormula>
        <errorMessage>Current Employee must be specified when the Currently Employed is checked.</errorMessage>
    </validationRules>
</CustomObject>